@@ -1,9 +1,9 @@
-/* $Id: terms.h,v 1.9 2003/09/22 21:02:22 ukai Exp $ */
+/* $Id: terms.h,v 1.10 2004/07/15 16:32:39 ukai Exp $ */
 #ifndef TERMS_H
 #define TERMS_H
 
 extern int LINES, COLS;
-#if defined(__CYGWIN__) && LANG == JA
+#if defined(__CYGWIN__)
 extern int LASTLINE;
 #endif
 
@@ -21,7 +21,7 @@ extern int LASTLINE;
 #endif
 
 #ifdef __CYGWIN__
-#ifdef USE_MOUSE
+#if CYGWIN_VERSION_DLL_MAJOR < 1005 && defined(USE_MOUSE)
 extern int cygwin_mouse_btn_swapped;
 #endif
 #ifdef SUPPORT_WIN9X_CONSOLE_MBCS
